# AI-Dont-Care-About-Cookies

./: .gitignore  README.md  package.json
data/js/: 5_clickHandler.js
js/: domain-resolver.js  index.d.ts  index.js  rules-data.js  test.js
python/: pyproject.toml  test_blocker.py
python/playwright_cookie_blocker/: __init__.py  domain_resolver.py  rules_data.py
