[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dont-care-about-cookies"
version = "1.1.0"
description = "Block cookie consent dialogs in Playwright - built for AI agents and web automation. Uses 15,000+ rules from 'I Still Don't Care About Cookies'."
requires-python = ">=3.8"
license = "GPL-3.0"
keywords = [
    "playwright",
    "cookies",
    "consent",
    "gdpr",
    "cookie-banner",
    "ai-agent",
    "web-scraping",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/fynn-grab/AI-Dont-Care-About-Cookies"
Repository = "https://github.com/fynn-grab/AI-Dont-Care-About-Cookies"
Issues = "https://github.com/fynn-grab/AI-Dont-Care-About-Cookies/issues"

[project.optional-dependencies]
dev = ["playwright>=1.20.0"]

[tool.setuptools.packages.find]
include = ["playwright_cookie_blocker*"]

[tool.setuptools.package-data]
playwright_cookie_blocker = ["data/**/*"]
